--- a/src/about.html
+++ b/src/about.html
@@ -10,9 +10,9 @@
                   </a>
               </li>
               <li class="breadcrumbs__item">
-                <a href="#" class="breadcrumbs__link">
+                <a href="#" class="breadcrumbs__link breadcrumbs__link--inactive">
                     <svg class="icon icon-breadcrumb"><use xlink:href="#icon-breadcrumb"></use></svg>
-                  Услуги
+                    О компании
                 </a>
               </li>
           </ul>
@@ -56,6 +56,231 @@
                     <br>
                     КД на жгуты разрабатывается согласно ГОСТ Р ИСО 9001-2015 (ISO 9001:2015), который применяется к разработке, производству, поставке жгутов и кабельных сборок.
                 </div>
+            </div>
+        </div>
+    </div>
+</section>
+<section class="section">
+    <div class="container">
+        <div class="about-num">
+            <div class="about-num__item">
+                <div class="about-num__top" style="background: url('./img/svg/about1.svg');background-size: contain;background-repeat: no-repeat;background-position: center;">
+                    1000+
+                    <span>кв. м.</span>
+                </div>
+                производственные мощности
+            </div>
+            <div class="about-num__item">
+                <div class="about-num__top" style="background: url('./img/svg/about2.svg');background-size: contain;background-repeat: no-repeat;background-position: center;">
+                    2
+                </div>
+                производственные площадки
+            </div>
+            <div class="about-num__item">
+                <div class="about-num__top" style="background: url('./img/svg/about3.svg');background-size: contain;background-repeat: no-repeat;background-position: center;">
+                    46
+                </div>
+                специалистов
+            </div>
+            <div class="about-num__item">
+                <div class="about-num__top" style="background: url('./img/svg/about4.svg');background-size: contain;background-repeat: no-repeat;background-position: center;">
+                    16
+                </div>
+                регионов
+            </div>
+            <div class="about-num__item">
+                <div class="about-num__top" style="background: url('./img/svg/about5.svg');background-size: contain;background-repeat: no-repeat;background-position: center;">
+                   677
+                </div>
+                реализованных проектов
+            </div>
+            <div class="about-num__item">
+                <div class="about-num__top" style="background: url('./img/svg/about6.svg');background-size: contain;background-repeat: no-repeat;background-position: center;">
+                    6,5+
+                    <span>млн метров</span>
+                </div>
+                обработано кабеля
+            </div>
+        </div>
+    </div>
+</section>
+<section class="section serv-sp">
+    <div class="container">
+        <div class="section__heading">
+            <h2 class="section__title">
+                Сервис
+            </h2>
+        </div>
+        <div class="serv-sp__wp">
+            <div class="serv-sp__text">
+                Мы специализируемся на производстве кабельных сборок и жгутов с 2011 года, выполняя заказы любой сложности и объема.
+                <br>
+                <br>
+                Наше производство охватывает полный цикл – от разработки до промышленного изготовления.  В нашем штате работают только профессионалы с опытом от 5 лет, что гарантирует высокое качество и оперативность выполнения заказов.
+            </div>
+            <div class="serv-sp__history">
+                <div class="serv-sp__history-top">
+                    14
+                    <span class="serv-sp__history-right">
+                        лет
+                        <span>в деле</span>
+                    </span>
+                </div>
+                Наше производство охватывает полный цикл – от разработки до промышленного изготовления.
+            </div>
+        </div>
+    </div>
+</section>
+<section class="section section--gray projects-mp">
+    <div class="container">
+        <div class="section__heading">
+            <h2 class="section__title">
+                Наши проекты
+            </h2>
+            <div class="section__nav-arrows">
+                <div class="swiper-button-prev slider-btn js-projects-prev">
+                    <img src="./img/svg/arrow-prev-black.svg" alt="">
+                </div>
+                <div class="swiper-button-next slider-btn js-projects-next">
+                    <img src="./img/svg/arrow-next-black.svg" alt="">
+                </div>
+            </div>
+        </div>
+        <div class="swiper projects__slider js-projects-slider">
+            <div class="swiper-wrapper">
+                <div class="swiper-slide">
+                    <a href="#" class="projects__item">
+                        <div class="projects__item-img">
+                            <img src="./img/main/projects1.png" alt="" title="" loading="lazy">
+                        </div>
+                        <div class="projects__item-desc">
+                            <div class="projects__item-title">
+                                Изготовление кабельных жгутов для компании ООО«Электрик»
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="swiper-slide">
+                    <a href="#" class="projects__item">
+                        <div class="projects__item-img">
+                            <img src="./img/main/projects2.png" alt="" title="" loading="lazy">
+                        </div>
+                        <div class="projects__item-desc">
+                            <div class="projects__item-title">
+                                Мерная нарезка провода для компании ООО «Свет»
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="swiper-slide">
+                    <a href="#" class="projects__item">
+                        <div class="projects__item-img">
+                            <img src="./img/main/projects3.png" alt="" title="" loading="lazy">
+                        </div>
+                        <div class="projects__item-desc">
+                            <div class="projects__item-title">
+                                Изготовление кабельных жгутов для электропроводки на теплоэлектростанции
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="swiper-slide">
+                    <a href="#" class="projects__item">
+                        <div class="projects__item-img">
+                            <img src="./img/main/projects1.png" alt="" title="" loading="lazy">
+                        </div>
+                        <div class="projects__item-desc">
+                            <div class="projects__item-title">
+                                Изготовление кабельных жгутов для компании ООО«Электрик»
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<section class="section news-mp">
+    <div class="container">
+        <div class="section__heading">
+            <h2 class="section__title">
+                Новости
+            </h2>
+            <div class="section__nav-arrows">
+                <div class="swiper-button-prev slider-btn js-news-prev">
+                    <img src="./img/svg/arrow-prev-black.svg" alt="">
+                </div>
+                <div class="swiper-button-next slider-btn js-news-next">
+                    <img src="./img/svg/arrow-next-black.svg" alt="">
+                </div>
+            </div>
+        </div>
+        <div class="swiper projects__slider js-news-slider">
+            <div class="swiper-wrapper">
+                <div class="swiper-slide">
+                   <a href="#" class="news__item">
+                    <div class="news__item-img">
+                        <img src="./img/main/news.png" alt="" title="" loading="lazy">
+                    </div>
+                    <div class="news__item-desc">
+                        <div class="news__item-title">
+                            Инновационные кабельные жгуты нового поколения
+                        </div>
+                        <div class="news__item-date">
+                            19 февраля
+                            <span>2025</span>
+                        </div>
+                    </div>
+                   </a>
+                </div>
+                <div class="swiper-slide">
+                    <a href="#" class="news__item">
+                     <div class="news__item-img">
+                         <img src="./img/main/news1.png" alt="" title="" loading="lazy">
+                     </div>
+                     <div class="news__item-desc">
+                         <div class="news__item-title">
+                            Расширение ассортимента кабельных жгутов для разных отраслей
+                         </div>
+                         <div class="news__item-date">
+                             19 февраля
+                             <span>2025</span>
+                         </div>
+                     </div>
+                    </a>
+                </div>
+                <div class="swiper-slide">
+                    <a href="#" class="news__item">
+                     <div class="news__item-img">
+                         <img src="./img/main/news.png" alt="" title="" loading="lazy">
+                     </div>
+                     <div class="news__item-desc">
+                         <div class="news__item-title">
+                             Инновационные кабельные жгуты нового поколения
+                         </div>
+                         <div class="news__item-date">
+                             19 февраля
+                             <span>2025</span>
+                         </div>
+                     </div>
+                    </a>
+                 </div>
+                 <div class="swiper-slide">
+                     <a href="#" class="news__item">
+                      <div class="news__item-img">
+                          <img src="./img/main/news1.png" alt="" title="" loading="lazy">
+                      </div>
+                      <div class="news__item-desc">
+                          <div class="news__item-title">
+                             Расширение ассортимента кабельных жгутов для разных отраслей
+                          </div>
+                          <div class="news__item-date">
+                              19 февраля
+                              <span>2025</span>
+                          </div>
+                      </div>
+                     </a>
+                 </div>
             </div>
         </div>
     </div>
