--- a/src/home.html
+++ b/src/home.html
@@ -250,7 +250,8 @@
             <div class="form-section__leftside">
                 <div class="section__heading">
                     <h2 class="section__title">
-                        Наши проекты
+                        Расскажите <br>
+                        о своём проекте
                     </h2>
                 </div>
                 <div class="form-section__text">
