--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,12 @@
       <li>
         <a href="./serv.html" target="_blank">Услуги</a>
       </li>
+      <li>
+        <a href="./serv-detail.html" target="_blank">Услуги - детальная страница</a>
+      </li>
+      <li>
+        <a href="./typical.html" target="_blank">Типовая страница</a>
+      </li>
     </ul>
 
 
