--- a/src/serv.html
+++ b/src/serv.html
@@ -10,7 +10,7 @@
                   </a>
               </li>
               <li class="breadcrumbs__item">
-                <a href="#" class="breadcrumbs__link">
+                <a href="#" class="breadcrumbs__link breadcrumbs__link--inactive">
                     <svg class="icon icon-breadcrumb"><use xlink:href="#icon-breadcrumb"></use></svg>
                   Услуги
                 </a>
@@ -21,4 +21,119 @@
       </div>
     </div>
 </div>
+<section class="section section--first">
+  <div class="container">
+    <div class="serv-sp__list">
+      <div class="serv__item">
+        <div class="serv__item-title">Контрактное производство</div>
+        <div class="serv__item-desc">
+          Разрабатываем жгуты, кабельные сборки, прилагая конструкторскую документацию. Данные виды работ соответствуют техническим заданию и эскизам. КД на жгуты разрабатывается согласно ГОСТ Р ИСО 9001-2015 (ISO 9001:2015), который применяется к разработк
+        </div>
+        <a href="#" class="btn btn--aqua">Подробнее</a>
+        <div class="serv__item-img">
+            <img src="./img/main/serv2.png" alt="" title="" loading="lazy">
+        </div>
+    </div>
+      <div class="serv__item">
+        <div class="serv__item-title">
+            Изготовление кабельных жгутов
+            и сборок
+        </div>
+        <div class="serv__item-desc">
+          Разрабатываем жгуты, кабельные сборки, прилагая конструкторскую документацию. Данные виды работ соответствуют техническим заданию и эскизам. КД на жгуты разрабатывается согласно ГОСТ Р ИСО 9001-2015 (ISO 9001:2015), который применяется к разработк
+        </div>
+        <a href="#" class="btn btn--aqua">Подробнее</a>
+        <div class="serv__item-img">
+            <img src="./img/main/serv1.png" alt="" title="" loading="lazy">
+        </div>
+      </div>
+
+      <div class="serv__item">
+          <div class="serv__item-title">3D печать</div>
+          <div class="serv__item-desc">
+            Разрабатываем жгуты, кабельные сборки, прилагая конструкторскую документацию. Данные виды работ соответствуют техническим заданию и эскизам. КД на жгуты разрабатывается согласно ГОСТ Р ИСО 9001-2015 (ISO 9001:2015), который применяется к разработк
+          </div>
+          <a href="#" class="btn btn--aqua">Подробнее</a>
+          <div class="serv__item-img">
+              <img src="./img/main/serv3.png" alt="" title="" loading="lazy">
+          </div>
+      </div>
+      <div class="serv__item">
+          <div class="serv__item-title">Обработка материалов</div>
+          <div class="serv__item-desc">
+            Разрабатываем жгуты, кабельные сборки, прилагая конструкторскую документацию. Данные виды работ соответствуют техническим заданию и эскизам. КД на жгуты разрабатывается согласно ГОСТ Р ИСО 9001-2015 (ISO 9001:2015), который применяется к разработк
+          </div>
+          <a href="#" class="btn btn--aqua">Подробнее</a>
+          <div class="serv__item-img">
+              <img src="./img/main/serv4.png" alt="" title="" loading="lazy">
+          </div>
+      </div>
+      <div class="serv__item">
+          <div class="serv__item-title">Инжиниринговые услуги</div>
+          <div class="serv__item-desc">
+            Разрабатываем жгуты, кабельные сборки, прилагая конструкторскую документацию. Данные виды работ соответствуют техническим заданию и эскизам. КД на жгуты разрабатывается согласно ГОСТ Р ИСО 9001-2015 (ISO 9001:2015), который применяется к разработк
+          </div>
+          <a href="#" class="btn btn--aqua">Подробнее</a>
+          <div class="serv__item-img">
+              <img src="./img/main/serv5.png" alt="" title="" loading="lazy">
+          </div>
+      </div>
+    </div>
+  </div>
+</section>
+<section class="section form-section">
+  <div class="container">
+      <div class="form-section__wp">
+          <div class="form-section__leftside">
+              <div class="section__heading">
+                  <h2 class="section__title">
+                    Расскажите <br>
+                    о своём проекте
+                  </h2>
+              </div>
+              <div class="form-section__text">
+                Опишите вашу задачу, которую необходимо  реализовать. Расскажите о технических требованиях и особенностях. Мы внимательно изучим ваш проект и предложим оптимальное решение.
+              </div>
+          </div>
+          <div class="form-section__rightside">
+              <form action="">
+                  <div class="field js-material-input is-required">
+                      <input class="field__input" name="form-name" id="form-name" autocomplete="off" type="text">
+                      <label class="field__label" for="form-name">Имя*</label>
+                  </div>
+                  <div class="field js-material-input is-required is-error">
+                      <input class="field__input" name="form-name" id="form-name" autocomplete="off" type="text">
+                      <label class="field__label" for="form-name">Email*</label>
+                  </div>
+                  <div class="field js-material-input">
+                      <input class="field__input" name="form-tel" id="form-tel" autocomplete="off" type="text">
+                      <label class="field__label" for="form-tel">Телефон*</label>
+                  </div>
+                  <div class="field field--textarea js-material-input is-required">
+                      <textarea class="field__input field__input--textarea" rows="3" name="" id="form-text" placeholder="Ваше сообщения*" autocomplete="off"></textarea>
+                  </div>
+                  <div class="field field--file">
+                      <input type="file" class="field__input" id="input-fashion-file" name="uploadfile" multiple="" hidden="">
+                      <label class="field__file" for="input-fashion-file">
+                          Перетащите сюда или <span>выберите файл</span>
+                      </label>
+                  </div>
+                  <div class="form__submit">
+                      <div class="form__submit-container">
+                            <button type="submit" class="btn btn--aqua">
+                              Отправить
+                            </button>
+                      </div>
+                      <div class="checkbox">
+                        <input type="checkbox" name="politic-modal" class="checkbox__input js-politic js-politic-auto" id="politic-modal" checked="">
+                        <label for="politic-modal" class="checkbox__label">
+                          При нажатии на кнопку «Отправить» вы соглашаетесь с <a href="/politika-konfidentsialnosti/" target="_blank">условиями о сборе персональных данных и политики конфиденциальности</a>
+                        </label>
+                      </div>
+                  </div>
+              </form>
+          </div>
+      </div>
+  </div>
+</section>
 @@include('include/footer.html')
