--- a/src/typical.html
+++ b/src/typical.html
@@ -12,7 +12,7 @@
               </li>
               <li class="breadcrumbs__item">
                   <a href="#" class="breadcrumbs__link breadcrumbs__link--inactive">
-                    <svg class="icon icon-arrow-down"><use xlink:href="#icon-arrow-down"></use></svg>
+                    <svg class="icon icon-breadcrumb"><use xlink:href="#icon-breadcrumb"></use></svg>
                     Типовая страница
                   </a>
               </li>
@@ -30,7 +30,7 @@
     <div class="content">
       <p>Эта страница создана для демонстрации блоков и элементов, которые используются на сайте, и служит руководством для всех, кто работает над ним. Дизайнеры и технологи отрабатывают здесь стили, чтобы добиться приемлемых результатов в различных сочетаниях блоков и элементов. Контент-менеджеры и редакторы используют страницу в качестве справочника по верстке типовых страниц. Здесь же рассказывается о некоторых общих правилах оформления контента.</p>
       <div class="content-img">
-        <img src="./img/content/typical-img.png" alt="">
+        <img src="./img/main/projects1.png" alt="">
         <p class="img-sub">Подпись к фотографии</p>
       </div>
       <p>Контент-менеджеры и редакторы используют страницу в качестве справочника по верстке типовых страниц. Здесь же рассказывается о некоторых общих правилах оформления контента.</p>
@@ -52,10 +52,6 @@
       <p>Текст состоит из некоторого количества предложений. Одно предложение, даже очень распространённое, сложное, текстом назвать нельзя, поскольку текст можно расчленить на самостоятельные предложения, а части предложения сочетаются по законам синтаксиса сложного предложения, но не текста.</p>
       <h6>H6. Низкоуровневый заголовок</h6>
       <p>Самый «нижний» заголовок &lt;h6&gt; может предварять такие элементы, как «Комментарий» или «Таблица».Если за заголовком более низкого уровня сразу следует заголовок более высокого, это нарушает композиционную связность элементов оформления и логику повествования. Поэтому после заголовка должен следовать текст (или иной контент), который этот заголовок и подчиненные ему подзаголовки, если они есть, озаглавливают.</p>
-      <h6>абзац с текстом 14 пикселей</h6>
-      <p class="small-text">Текст состоит из некоторого количества предложений. Одно предложение, даже очень распространённое, сложное, текстом назвать нельзя, поскольку текст можно расчленить на самостоятельные предложения, а части предложения сочетаются по законам синтаксиса сложного предложения, но не текста.</p>
-      <p class="small-text">Текст состоит из некоторого количества предложений. Одно предложение, даже очень распространённое, сложное, текстом назвать нельзя, поскольку текст можно расчленить на самостоятельные предложения, а части предложения сочетаются по законам синтаксиса сложного предложения, но не текста.</p>
-      <p class="small-text">Текст состоит из некоторого количества предложений. Одно предложение, даже очень распространённое, сложное, текстом назвать нельзя, поскольку текст можно расчленить на самостоятельные предложения, а части предложения сочетаются по законам синтаксиса сложного предложения, но не текста.</p>
       <h6>Списки</h6>
       <p>Кроме того, существуют правила оформления списков:</p>
       <ul>
@@ -76,25 +72,6 @@
         </li>
         <li>Если пункты списка длинные и представляют собой развернутые предложения, они должны начинаться с прописной буквы и заканчиваться точкой.</li>
       </ol>
-      <h6>Списки с текстом 14 пикселей</h6>
-      <ul class="small-text">
-        <li>
-          Если пункты списка длинные и представляют собой развернутые предложения, они должны начинаться с прописной буквы и заканчиваться точкой.
-          <ul class="small-text">
-            <li>Если пункты списка длинные и представляют собой развернутые предложения, они должны начинаться с прописной буквы и заканчиваться точкой.</li>
-            <li>Если пункты списка короткие, не являются самостоятельной законченной конструкцией и грамматически тесно связаны с предшествующей списку вводной фразой, они должны начинаться со строчной буквы и заканчиваться точкой с запятой (в конце последнего пункта — точка).</li>
-          </ul>
-        </li>
-        <li>Если пункты списка длинные и представляют собой развернутые предложения, они должны начинаться с прописной буквы и заканчиваться точкой.</li>
-        <li>Если пункты списка короткие, не являются самостоятельной законченной конструкцией и грамматически тесно связаны с предшествующей списку вводной фразой, они должны начинаться со строчной буквы и заканчиваться точкой с запятой (в конце последнего пункта — точка).</li>
-      </ul>
-      <h6>Нумерованные Списки</h6>
-      <p>Это набор элементов (пунктов списка), имеющих определённую последовательность. Каждый пункт нумерованного списка имеет:</p>
-      <ol class="small-text">
-        <li>Если пункты списка длинные и представляют собой развернутые предложения, они должны начинаться с прописной буквы и заканчиваться точкой.
-        </li>
-        <li>Если пункты списка длинные и представляют собой развернутые предложения, они должны начинаться с прописной буквы и заканчиваться точкой.</li>
-      </ol>
       <h6>Ссылки</h6>
       <p>Состояния ссылок на сайте: <a href="#">link</a> — это состояние ссылки до ее активации, <a href="#">visited</a> — состояние, в которое переходит ссылка после ее активации, <a href="#">hover</a> — состояние, когда указатель мыши наведен на ссылку. <a href="#">active</a> — состояние, возникающее при щелчке на ссылке для ее активизации.
       </p><p>На сайте может встречаться несколько видов ссылок. <br>
@@ -109,85 +86,6 @@
       <h6>Важно</h6>
       <p class="warning">Элемент «Важно». Используется для выделения особо важной информации. И еще немного специально написанного текста, чтобы получилось несколько строк для наглядности.</p>
       <h6>Таблицы</h6>
-      <div class="small-title">Таблица в два столбика</div>
-      <div class="table-responsive columns-2">
-        <table>
-          <tr>
-            <td>Заголовочная ячейка</td>
-            <td>ячейка внутри тела таблицы</td>
-          </tr>
-          <tr>
-            <td>Заголовочная ячейка</td>
-            <td>ячейка внутри тела таблицы</td>
-          </tr>
-          <tr>
-            <td>Заголовочная ячейка</td>
-            <td>ячейка внутри тела таблицы</td>
-          </tr>
-          <tr>
-            <td>Заголовочная ячейка</td>
-            <td>ячейка внутри тела таблицы</td>
-          </tr>
-        </table>
-      </div>
-      <div class="small-title">Таблица в четыре столбика</div>
-      <div class="table-responsive columns-4">
-        <table>
-          <thead>
-            <tr>
-              <th colspan="4">Заголовок</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td>ячейка</td>
-              <td>ячейка</td>
-              <td>ячейка</td>
-              <td>ячейка</td>
-            </tr>
-          </tbody>
-          <thead>
-            <tr>
-              <th colspan="4">Заголовок</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td>ячейка</td>
-              <td>ячейка</td>
-              <td>ячейка</td>
-              <td>ячейка</td>
-            </tr>
-          </tbody>
-          <thead>
-            <tr>
-              <th colspan="4">Заголовок</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td>ячейка</td>
-              <td>ячейка</td>
-              <td>ячейка</td>
-              <td>ячейка</td>
-            </tr>
-          </tbody>
-          <thead>
-            <tr>
-              <th colspan="4">Заголовок</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td>ячейка</td>
-              <td>ячейка</td>
-              <td>ячейка</td>
-              <td>ячейка</td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
-      <div class="small-title">Таблица в четыре столбика с названиями столбцов</div>
       <div class="table-responsive">
         <table>
             <thead>
