--- a/verstka/typical.html
+++ b/verstka/typical.html
@@ -150,7 +150,7 @@
               </li>
               <li class="breadcrumbs__item">
                   <a href="#" class="breadcrumbs__link breadcrumbs__link--inactive">
-                    <svg class="icon icon-arrow-down"><use xlink:href="#icon-arrow-down"></use></svg>
+                    <svg class="icon icon-breadcrumb"><use xlink:href="#icon-breadcrumb"></use></svg>
                     Типовая страница
                   </a>
               </li>
@@ -168,7 +168,7 @@
     <div class="content">
       <p>Эта страница создана для демонстрации блоков и элементов, которые используются на сайте, и служит руководством для всех, кто работает над ним. Дизайнеры и технологи отрабатывают здесь стили, чтобы добиться приемлемых результатов в различных сочетаниях блоков и элементов. Контент-менеджеры и редакторы используют страницу в качестве справочника по верстке типовых страниц. Здесь же рассказывается о некоторых общих правилах оформления контента.</p>
       <div class="content-img">
-        <img src="./img/content/typical-img.png" alt="">
+        <img src="./img/main/projects1.png" alt="">
         <p class="img-sub">Подпись к фотографии</p>
       </div>
       <p>Контент-менеджеры и редакторы используют страницу в качестве справочника по верстке типовых страниц. Здесь же рассказывается о некоторых общих правилах оформления контента.</p>
@@ -190,10 +190,6 @@
       <p>Текст состоит из некоторого количества предложений. Одно предложение, даже очень распространённое, сложное, текстом назвать нельзя, поскольку текст можно расчленить на самостоятельные предложения, а части предложения сочетаются по законам синтаксиса сложного предложения, но не текста.</p>
       <h6>H6. Низкоуровневый заголовок</h6>
       <p>Самый «нижний» заголовок &lt;h6&gt; может предварять такие элементы, как «Комментарий» или «Таблица».Если за заголовком более низкого уровня сразу следует заголовок более высокого, это нарушает композиционную связность элементов оформления и логику повествования. Поэтому после заголовка должен следовать текст (или иной контент), который этот заголовок и подчиненные ему подзаголовки, если они есть, озаглавливают.</p>
-      <h6>абзац с текстом 14 пикселей</h6>
-      <p class="small-text">Текст состоит из некоторого количества предложений. Одно предложение, даже очень распространённое, сложное, текстом назвать нельзя, поскольку текст можно расчленить на самостоятельные предложения, а части предложения сочетаются по законам синтаксиса сложного предложения, но не текста.</p>
-      <p class="small-text">Текст состоит из некоторого количества предложений. Одно предложение, даже очень распространённое, сложное, текстом назвать нельзя, поскольку текст можно расчленить на самостоятельные предложения, а части предложения сочетаются по законам синтаксиса сложного предложения, но не текста.</p>
-      <p class="small-text">Текст состоит из некоторого количества предложений. Одно предложение, даже очень распространённое, сложное, текстом назвать нельзя, поскольку текст можно расчленить на самостоятельные предложения, а части предложения сочетаются по законам синтаксиса сложного предложения, но не текста.</p>
       <h6>Списки</h6>
       <p>Кроме того, существуют правила оформления списков:</p>
       <ul>
@@ -214,25 +210,6 @@
         </li>
         <li>Если пункты списка длинные и представляют собой развернутые предложения, они должны начинаться с прописной буквы и заканчиваться точкой.</li>
       </ol>
-      <h6>Списки с текстом 14 пикселей</h6>
-      <ul class="small-text">
-        <li>
-          Если пункты списка длинные и представляют собой развернутые предложения, они должны начинаться с прописной буквы и заканчиваться точкой.
-          <ul class="small-text">
-            <li>Если пункты списка длинные и представляют собой развернутые предложения, они должны начинаться с прописной буквы и заканчиваться точкой.</li>
-            <li>Если пункты списка короткие, не являются самостоятельной законченной конструкцией и грамматически тесно связаны с предшествующей списку вводной фразой, они должны начинаться со строчной буквы и заканчиваться точкой с запятой (в конце последнего пункта — точка).</li>
-          </ul>
-        </li>
-        <li>Если пункты списка длинные и представляют собой развернутые предложения, они должны начинаться с прописной буквы и заканчиваться точкой.</li>
-        <li>Если пункты списка короткие, не являются самостоятельной законченной конструкцией и грамматически тесно связаны с предшествующей списку вводной фразой, они должны начинаться со строчной буквы и заканчиваться точкой с запятой (в конце последнего пункта — точка).</li>
-      </ul>
-      <h6>Нумерованные Списки</h6>
-      <p>Это набор элементов (пунктов списка), имеющих определённую последовательность. Каждый пункт нумерованного списка имеет:</p>
-      <ol class="small-text">
-        <li>Если пункты списка длинные и представляют собой развернутые предложения, они должны начинаться с прописной буквы и заканчиваться точкой.
-        </li>
-        <li>Если пункты списка длинные и представляют собой развернутые предложения, они должны начинаться с прописной буквы и заканчиваться точкой.</li>
-      </ol>
       <h6>Ссылки</h6>
       <p>Состояния ссылок на сайте: <a href="#">link</a> — это состояние ссылки до ее активации, <a href="#">visited</a> — состояние, в которое переходит ссылка после ее активации, <a href="#">hover</a> — состояние, когда указатель мыши наведен на ссылку. <a href="#">active</a> — состояние, возникающее при щелчке на ссылке для ее активизации.
       </p><p>На сайте может встречаться несколько видов ссылок. <br>
@@ -247,85 +224,6 @@
       <h6>Важно</h6>
       <p class="warning">Элемент «Важно». Используется для выделения особо важной информации. И еще немного специально написанного текста, чтобы получилось несколько строк для наглядности.</p>
       <h6>Таблицы</h6>
-      <div class="small-title">Таблица в два столбика</div>
-      <div class="table-responsive columns-2">
-        <table>
-          <tr>
-            <td>Заголовочная ячейка</td>
-            <td>ячейка внутри тела таблицы</td>
-          </tr>
-          <tr>
-            <td>Заголовочная ячейка</td>
-            <td>ячейка внутри тела таблицы</td>
-          </tr>
-          <tr>
-            <td>Заголовочная ячейка</td>
-            <td>ячейка внутри тела таблицы</td>
-          </tr>
-          <tr>
-            <td>Заголовочная ячейка</td>
-            <td>ячейка внутри тела таблицы</td>
-          </tr>
-        </table>
-      </div>
-      <div class="small-title">Таблица в четыре столбика</div>
-      <div class="table-responsive columns-4">
-        <table>
-          <thead>
-            <tr>
-              <th colspan="4">Заголовок</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td>ячейка</td>
-              <td>ячейка</td>
-              <td>ячейка</td>
-              <td>ячейка</td>
-            </tr>
-          </tbody>
-          <thead>
-            <tr>
-              <th colspan="4">Заголовок</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td>ячейка</td>
-              <td>ячейка</td>
-              <td>ячейка</td>
-              <td>ячейка</td>
-            </tr>
-          </tbody>
-          <thead>
-            <tr>
-              <th colspan="4">Заголовок</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td>ячейка</td>
-              <td>ячейка</td>
-              <td>ячейка</td>
-              <td>ячейка</td>
-            </tr>
-          </tbody>
-          <thead>
-            <tr>
-              <th colspan="4">Заголовок</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td>ячейка</td>
-              <td>ячейка</td>
-              <td>ячейка</td>
-              <td>ячейка</td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
-      <div class="small-title">Таблица в четыре столбика с названиями столбцов</div>
       <div class="table-responsive">
         <table>
             <thead>
@@ -520,6 +418,24 @@
     </symbol>
     <symbol id="icon-breadcrumb" viewBox="0 0 32 32">
       <path d="M32 16c0 8.837-7.163 16-16 16s-16-7.163-16-16c0-8.837 7.163-16 16-16s16 7.163 16 16z"></path>
+    </symbol>
+    <symbol id="icon-link-external" viewBox="0 0 37 32">
+      <path d="M34.933 22.933h-25.6v-21.333h2.667v18.667h20.267v-18.667h2.667z"></path>
+      <path d="M12 7.2v-4.267h21.333v4.267h-21.333z"></path>
+      <path d="M34.4 8.533h-23.733v-6.933h24v6.933zM13.333 5.867h18.667v-1.6h-18.667v1.6z"></path>
+      <path d="M27.467 29.6h-25.6v-21.067h2.667v18.4h20.267v-2.133h2.667z"></path>
+      <path d="M4.533 14.133v-4.267h1.6v4.267h-1.6z"></path>
+      <path d="M3.2 8.533h4.267v6.933h-4.267v-6.933z"></path>
+    </symbol>
+    <symbol id="icon-link-inside" viewBox="0 0 34 32">
+        <path d="M28.308 29.785h-27.569v-22.892h2.462v20.431h22.646v-10.831h2.462z"></path>
+        <path d="M3.2 13.292v-5.169h12.8v5.169h-12.8z"></path>
+        <path d="M17.231 14.523h-15.262v-7.631h15.262v7.631zM4.431 12.062h10.338v-2.708h-10.338v2.708z"></path>
+        <path d="M19.544 15.171l12.199-12.515 1.763 1.718-12.199 12.515-1.763-1.718z"></path>
+        <path d="M32 9.846l-0.246-5.908h-5.908v-2.462h8.369l0.246 8.369z"></path>
+    </symbol>
+    <symbol id="icon-arrow-left" viewBox="0 0 27 32">
+      <path d="M26.057 30.171v-28.343l-25.371 14.171 25.371 14.171z"></path>
     </symbol>
   </defs>
 </svg>
