--- a/verstka/about.html
+++ b/verstka/about.html
@@ -148,9 +148,9 @@
                   </a>
               </li>
               <li class="breadcrumbs__item">
-                <a href="#" class="breadcrumbs__link">
+                <a href="#" class="breadcrumbs__link breadcrumbs__link--inactive">
                     <svg class="icon icon-breadcrumb"><use xlink:href="#icon-breadcrumb"></use></svg>
-                  Услуги
+                    О компании
                 </a>
               </li>
           </ul>
@@ -194,6 +194,231 @@
                     <br>
                     КД на жгуты разрабатывается согласно ГОСТ Р ИСО 9001-2015 (ISO 9001:2015), который применяется к разработке, производству, поставке жгутов и кабельных сборок.
                 </div>
+            </div>
+        </div>
+    </div>
+</section>
+<section class="section">
+    <div class="container">
+        <div class="about-num">
+            <div class="about-num__item">
+                <div class="about-num__top" style="background: url('./img/svg/about1.svg');background-size: contain;background-repeat: no-repeat;background-position: center;">
+                    1000+
+                    <span>кв. м.</span>
+                </div>
+                производственные мощности
+            </div>
+            <div class="about-num__item">
+                <div class="about-num__top" style="background: url('./img/svg/about2.svg');background-size: contain;background-repeat: no-repeat;background-position: center;">
+                    2
+                </div>
+                производственные площадки
+            </div>
+            <div class="about-num__item">
+                <div class="about-num__top" style="background: url('./img/svg/about3.svg');background-size: contain;background-repeat: no-repeat;background-position: center;">
+                    46
+                </div>
+                специалистов
+            </div>
+            <div class="about-num__item">
+                <div class="about-num__top" style="background: url('./img/svg/about4.svg');background-size: contain;background-repeat: no-repeat;background-position: center;">
+                    16
+                </div>
+                регионов
+            </div>
+            <div class="about-num__item">
+                <div class="about-num__top" style="background: url('./img/svg/about5.svg');background-size: contain;background-repeat: no-repeat;background-position: center;">
+                   677
+                </div>
+                реализованных проектов
+            </div>
+            <div class="about-num__item">
+                <div class="about-num__top" style="background: url('./img/svg/about6.svg');background-size: contain;background-repeat: no-repeat;background-position: center;">
+                    6,5+
+                    <span>млн метров</span>
+                </div>
+                обработано кабеля
+            </div>
+        </div>
+    </div>
+</section>
+<section class="section serv-sp">
+    <div class="container">
+        <div class="section__heading">
+            <h2 class="section__title">
+                Сервис
+            </h2>
+        </div>
+        <div class="serv-sp__wp">
+            <div class="serv-sp__text">
+                Мы специализируемся на производстве кабельных сборок и жгутов с 2011 года, выполняя заказы любой сложности и объема.
+                <br>
+                <br>
+                Наше производство охватывает полный цикл – от разработки до промышленного изготовления.  В нашем штате работают только профессионалы с опытом от 5 лет, что гарантирует высокое качество и оперативность выполнения заказов.
+            </div>
+            <div class="serv-sp__history">
+                <div class="serv-sp__history-top">
+                    14
+                    <span class="serv-sp__history-right">
+                        лет
+                        <span>в деле</span>
+                    </span>
+                </div>
+                Наше производство охватывает полный цикл – от разработки до промышленного изготовления.
+            </div>
+        </div>
+    </div>
+</section>
+<section class="section section--gray projects-mp">
+    <div class="container">
+        <div class="section__heading">
+            <h2 class="section__title">
+                Наши проекты
+            </h2>
+            <div class="section__nav-arrows">
+                <div class="swiper-button-prev slider-btn js-projects-prev">
+                    <img src="./img/svg/arrow-prev-black.svg" alt="">
+                </div>
+                <div class="swiper-button-next slider-btn js-projects-next">
+                    <img src="./img/svg/arrow-next-black.svg" alt="">
+                </div>
+            </div>
+        </div>
+        <div class="swiper projects__slider js-projects-slider">
+            <div class="swiper-wrapper">
+                <div class="swiper-slide">
+                    <a href="#" class="projects__item">
+                        <div class="projects__item-img">
+                            <img src="./img/main/projects1.png" alt="" title="" loading="lazy">
+                        </div>
+                        <div class="projects__item-desc">
+                            <div class="projects__item-title">
+                                Изготовление кабельных жгутов для компании ООО«Электрик»
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="swiper-slide">
+                    <a href="#" class="projects__item">
+                        <div class="projects__item-img">
+                            <img src="./img/main/projects2.png" alt="" title="" loading="lazy">
+                        </div>
+                        <div class="projects__item-desc">
+                            <div class="projects__item-title">
+                                Мерная нарезка провода для компании ООО «Свет»
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="swiper-slide">
+                    <a href="#" class="projects__item">
+                        <div class="projects__item-img">
+                            <img src="./img/main/projects3.png" alt="" title="" loading="lazy">
+                        </div>
+                        <div class="projects__item-desc">
+                            <div class="projects__item-title">
+                                Изготовление кабельных жгутов для электропроводки на теплоэлектростанции
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="swiper-slide">
+                    <a href="#" class="projects__item">
+                        <div class="projects__item-img">
+                            <img src="./img/main/projects1.png" alt="" title="" loading="lazy">
+                        </div>
+                        <div class="projects__item-desc">
+                            <div class="projects__item-title">
+                                Изготовление кабельных жгутов для компании ООО«Электрик»
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<section class="section news-mp">
+    <div class="container">
+        <div class="section__heading">
+            <h2 class="section__title">
+                Новости
+            </h2>
+            <div class="section__nav-arrows">
+                <div class="swiper-button-prev slider-btn js-news-prev">
+                    <img src="./img/svg/arrow-prev-black.svg" alt="">
+                </div>
+                <div class="swiper-button-next slider-btn js-news-next">
+                    <img src="./img/svg/arrow-next-black.svg" alt="">
+                </div>
+            </div>
+        </div>
+        <div class="swiper projects__slider js-news-slider">
+            <div class="swiper-wrapper">
+                <div class="swiper-slide">
+                   <a href="#" class="news__item">
+                    <div class="news__item-img">
+                        <img src="./img/main/news.png" alt="" title="" loading="lazy">
+                    </div>
+                    <div class="news__item-desc">
+                        <div class="news__item-title">
+                            Инновационные кабельные жгуты нового поколения
+                        </div>
+                        <div class="news__item-date">
+                            19 февраля
+                            <span>2025</span>
+                        </div>
+                    </div>
+                   </a>
+                </div>
+                <div class="swiper-slide">
+                    <a href="#" class="news__item">
+                     <div class="news__item-img">
+                         <img src="./img/main/news1.png" alt="" title="" loading="lazy">
+                     </div>
+                     <div class="news__item-desc">
+                         <div class="news__item-title">
+                            Расширение ассортимента кабельных жгутов для разных отраслей
+                         </div>
+                         <div class="news__item-date">
+                             19 февраля
+                             <span>2025</span>
+                         </div>
+                     </div>
+                    </a>
+                </div>
+                <div class="swiper-slide">
+                    <a href="#" class="news__item">
+                     <div class="news__item-img">
+                         <img src="./img/main/news.png" alt="" title="" loading="lazy">
+                     </div>
+                     <div class="news__item-desc">
+                         <div class="news__item-title">
+                             Инновационные кабельные жгуты нового поколения
+                         </div>
+                         <div class="news__item-date">
+                             19 февраля
+                             <span>2025</span>
+                         </div>
+                     </div>
+                    </a>
+                 </div>
+                 <div class="swiper-slide">
+                     <a href="#" class="news__item">
+                      <div class="news__item-img">
+                          <img src="./img/main/news1.png" alt="" title="" loading="lazy">
+                      </div>
+                      <div class="news__item-desc">
+                          <div class="news__item-title">
+                             Расширение ассортимента кабельных жгутов для разных отраслей
+                          </div>
+                          <div class="news__item-date">
+                              19 февраля
+                              <span>2025</span>
+                          </div>
+                      </div>
+                     </a>
+                 </div>
             </div>
         </div>
     </div>
@@ -331,6 +556,24 @@
     </symbol>
     <symbol id="icon-breadcrumb" viewBox="0 0 32 32">
       <path d="M32 16c0 8.837-7.163 16-16 16s-16-7.163-16-16c0-8.837 7.163-16 16-16s16 7.163 16 16z"></path>
+    </symbol>
+    <symbol id="icon-link-external" viewBox="0 0 37 32">
+      <path d="M34.933 22.933h-25.6v-21.333h2.667v18.667h20.267v-18.667h2.667z"></path>
+      <path d="M12 7.2v-4.267h21.333v4.267h-21.333z"></path>
+      <path d="M34.4 8.533h-23.733v-6.933h24v6.933zM13.333 5.867h18.667v-1.6h-18.667v1.6z"></path>
+      <path d="M27.467 29.6h-25.6v-21.067h2.667v18.4h20.267v-2.133h2.667z"></path>
+      <path d="M4.533 14.133v-4.267h1.6v4.267h-1.6z"></path>
+      <path d="M3.2 8.533h4.267v6.933h-4.267v-6.933z"></path>
+    </symbol>
+    <symbol id="icon-link-inside" viewBox="0 0 34 32">
+        <path d="M28.308 29.785h-27.569v-22.892h2.462v20.431h22.646v-10.831h2.462z"></path>
+        <path d="M3.2 13.292v-5.169h12.8v5.169h-12.8z"></path>
+        <path d="M17.231 14.523h-15.262v-7.631h15.262v7.631zM4.431 12.062h10.338v-2.708h-10.338v2.708z"></path>
+        <path d="M19.544 15.171l12.199-12.515 1.763 1.718-12.199 12.515-1.763-1.718z"></path>
+        <path d="M32 9.846l-0.246-5.908h-5.908v-2.462h8.369l0.246 8.369z"></path>
+    </symbol>
+    <symbol id="icon-arrow-left" viewBox="0 0 27 32">
+      <path d="M26.057 30.171v-28.343l-25.371 14.171 25.371 14.171z"></path>
     </symbol>
   </defs>
 </svg>
