--- a/verstka/serv.html
+++ b/verstka/serv.html
@@ -148,7 +148,7 @@
                   </a>
               </li>
               <li class="breadcrumbs__item">
-                <a href="#" class="breadcrumbs__link">
+                <a href="#" class="breadcrumbs__link breadcrumbs__link--inactive">
                     <svg class="icon icon-breadcrumb"><use xlink:href="#icon-breadcrumb"></use></svg>
                   Услуги
                 </a>
@@ -159,6 +159,121 @@
       </div>
     </div>
 </div>
+<section class="section section--first">
+  <div class="container">
+    <div class="serv-sp__list">
+      <div class="serv__item">
+        <div class="serv__item-title">Контрактное производство</div>
+        <div class="serv__item-desc">
+          Разрабатываем жгуты, кабельные сборки, прилагая конструкторскую документацию. Данные виды работ соответствуют техническим заданию и эскизам. КД на жгуты разрабатывается согласно ГОСТ Р ИСО 9001-2015 (ISO 9001:2015), который применяется к разработк
+        </div>
+        <a href="#" class="btn btn--aqua">Подробнее</a>
+        <div class="serv__item-img">
+            <img src="./img/main/serv2.png" alt="" title="" loading="lazy">
+        </div>
+    </div>
+      <div class="serv__item">
+        <div class="serv__item-title">
+            Изготовление кабельных жгутов
+            и сборок
+        </div>
+        <div class="serv__item-desc">
+          Разрабатываем жгуты, кабельные сборки, прилагая конструкторскую документацию. Данные виды работ соответствуют техническим заданию и эскизам. КД на жгуты разрабатывается согласно ГОСТ Р ИСО 9001-2015 (ISO 9001:2015), который применяется к разработк
+        </div>
+        <a href="#" class="btn btn--aqua">Подробнее</a>
+        <div class="serv__item-img">
+            <img src="./img/main/serv1.png" alt="" title="" loading="lazy">
+        </div>
+      </div>
+
+      <div class="serv__item">
+          <div class="serv__item-title">3D печать</div>
+          <div class="serv__item-desc">
+            Разрабатываем жгуты, кабельные сборки, прилагая конструкторскую документацию. Данные виды работ соответствуют техническим заданию и эскизам. КД на жгуты разрабатывается согласно ГОСТ Р ИСО 9001-2015 (ISO 9001:2015), который применяется к разработк
+          </div>
+          <a href="#" class="btn btn--aqua">Подробнее</a>
+          <div class="serv__item-img">
+              <img src="./img/main/serv3.png" alt="" title="" loading="lazy">
+          </div>
+      </div>
+      <div class="serv__item">
+          <div class="serv__item-title">Обработка материалов</div>
+          <div class="serv__item-desc">
+            Разрабатываем жгуты, кабельные сборки, прилагая конструкторскую документацию. Данные виды работ соответствуют техническим заданию и эскизам. КД на жгуты разрабатывается согласно ГОСТ Р ИСО 9001-2015 (ISO 9001:2015), который применяется к разработк
+          </div>
+          <a href="#" class="btn btn--aqua">Подробнее</a>
+          <div class="serv__item-img">
+              <img src="./img/main/serv4.png" alt="" title="" loading="lazy">
+          </div>
+      </div>
+      <div class="serv__item">
+          <div class="serv__item-title">Инжиниринговые услуги</div>
+          <div class="serv__item-desc">
+            Разрабатываем жгуты, кабельные сборки, прилагая конструкторскую документацию. Данные виды работ соответствуют техническим заданию и эскизам. КД на жгуты разрабатывается согласно ГОСТ Р ИСО 9001-2015 (ISO 9001:2015), который применяется к разработк
+          </div>
+          <a href="#" class="btn btn--aqua">Подробнее</a>
+          <div class="serv__item-img">
+              <img src="./img/main/serv5.png" alt="" title="" loading="lazy">
+          </div>
+      </div>
+    </div>
+  </div>
+</section>
+<section class="section form-section">
+  <div class="container">
+      <div class="form-section__wp">
+          <div class="form-section__leftside">
+              <div class="section__heading">
+                  <h2 class="section__title">
+                    Расскажите <br>
+                    о своём проекте
+                  </h2>
+              </div>
+              <div class="form-section__text">
+                Опишите вашу задачу, которую необходимо  реализовать. Расскажите о технических требованиях и особенностях. Мы внимательно изучим ваш проект и предложим оптимальное решение.
+              </div>
+          </div>
+          <div class="form-section__rightside">
+              <form action="">
+                  <div class="field js-material-input is-required">
+                      <input class="field__input" name="form-name" id="form-name" autocomplete="off" type="text">
+                      <label class="field__label" for="form-name">Имя*</label>
+                  </div>
+                  <div class="field js-material-input is-required is-error">
+                      <input class="field__input" name="form-name" id="form-name" autocomplete="off" type="text">
+                      <label class="field__label" for="form-name">Email*</label>
+                  </div>
+                  <div class="field js-material-input">
+                      <input class="field__input" name="form-tel" id="form-tel" autocomplete="off" type="text">
+                      <label class="field__label" for="form-tel">Телефон*</label>
+                  </div>
+                  <div class="field field--textarea js-material-input is-required">
+                      <textarea class="field__input field__input--textarea" rows="3" name="" id="form-text" placeholder="Ваше сообщения*" autocomplete="off"></textarea>
+                  </div>
+                  <div class="field field--file">
+                      <input type="file" class="field__input" id="input-fashion-file" name="uploadfile" multiple="" hidden="">
+                      <label class="field__file" for="input-fashion-file">
+                          Перетащите сюда или <span>выберите файл</span>
+                      </label>
+                  </div>
+                  <div class="form__submit">
+                      <div class="form__submit-container">
+                            <button type="submit" class="btn btn--aqua">
+                              Отправить
+                            </button>
+                      </div>
+                      <div class="checkbox">
+                        <input type="checkbox" name="politic-modal" class="checkbox__input js-politic js-politic-auto" id="politic-modal" checked="">
+                        <label for="politic-modal" class="checkbox__label">
+                          При нажатии на кнопку «Отправить» вы соглашаетесь с <a href="/politika-konfidentsialnosti/" target="_blank">условиями о сборе персональных данных и политики конфиденциальности</a>
+                        </label>
+                      </div>
+                  </div>
+              </form>
+          </div>
+      </div>
+  </div>
+</section>
 </div>
 
 <footer class="footer">
@@ -292,6 +407,24 @@
     </symbol>
     <symbol id="icon-breadcrumb" viewBox="0 0 32 32">
       <path d="M32 16c0 8.837-7.163 16-16 16s-16-7.163-16-16c0-8.837 7.163-16 16-16s16 7.163 16 16z"></path>
+    </symbol>
+    <symbol id="icon-link-external" viewBox="0 0 37 32">
+      <path d="M34.933 22.933h-25.6v-21.333h2.667v18.667h20.267v-18.667h2.667z"></path>
+      <path d="M12 7.2v-4.267h21.333v4.267h-21.333z"></path>
+      <path d="M34.4 8.533h-23.733v-6.933h24v6.933zM13.333 5.867h18.667v-1.6h-18.667v1.6z"></path>
+      <path d="M27.467 29.6h-25.6v-21.067h2.667v18.4h20.267v-2.133h2.667z"></path>
+      <path d="M4.533 14.133v-4.267h1.6v4.267h-1.6z"></path>
+      <path d="M3.2 8.533h4.267v6.933h-4.267v-6.933z"></path>
+    </symbol>
+    <symbol id="icon-link-inside" viewBox="0 0 34 32">
+        <path d="M28.308 29.785h-27.569v-22.892h2.462v20.431h22.646v-10.831h2.462z"></path>
+        <path d="M3.2 13.292v-5.169h12.8v5.169h-12.8z"></path>
+        <path d="M17.231 14.523h-15.262v-7.631h15.262v7.631zM4.431 12.062h10.338v-2.708h-10.338v2.708z"></path>
+        <path d="M19.544 15.171l12.199-12.515 1.763 1.718-12.199 12.515-1.763-1.718z"></path>
+        <path d="M32 9.846l-0.246-5.908h-5.908v-2.462h8.369l0.246 8.369z"></path>
+    </symbol>
+    <symbol id="icon-arrow-left" viewBox="0 0 27 32">
+      <path d="M26.057 30.171v-28.343l-25.371 14.171 25.371 14.171z"></path>
     </symbol>
   </defs>
 </svg>
